--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header class="bg-gradient-to-r from-blue-800 to-indigo-900 shadow-2xl py-8">
         <div class="container mx-auto px-4">
             <div class="flex items-center justify-between">
-                <img src="Original_jpg.jpg" alt="Imagem esquerda" class="header-image max-h-20 w-auto object-contain">
+                <img src="Original_jpg.jpg" alt="Imagem esquerda" class="header-image w-auto object-contain">
                 <div class="text-center flex-1 px-4">
                     <h1 class="text-3xl md:text-4xl font-bold text-white mb-2 font-serif">
                         Filosofia da Música
@@ -43,7 +43,7 @@
                         Do livro 'Filosofia da Música' de Paulo Volker
                     </p>
                 </div>
-                <img src="capas  volume_MUSICA.png" alt="Imagem direita" class="header-image max-h-20 w-auto object-contain">
+                <img src="capas  volume_MUSICA.png" alt="Imagem direita" class="header-image w-auto object-contain">
             </div>
         </div>
     </header>
