--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     <!-- Grid Carrossel Horizontal -->
     <main class="py-12">
         <div class="container mx-auto px-4">
+
+            
             <h2 class="text-3xl font-bold text-center mb-8 text-blue-200">
                 Explore as Composições
             </h2>
@@ -116,6 +118,7 @@
 
     <!-- Scripts -->
     <script src="js/config.js"></script>
+    <script src="js/data.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
