--- a/index.html
+++ b/index.html
@@ -74,6 +74,34 @@
         </div>
     </main>
 
+    <!-- Faixa de Busca -->
+    <section class="search-section bg-gradient-to-r from-slate-800 via-blue-800 to-slate-800 py-6 border-t border-blue-500/30">
+        <div class="container mx-auto px-4">
+            <div class="max-w-2xl mx-auto">
+                <h3 class="text-2xl font-bold text-center mb-4 text-blue-200">
+                    🔍 Buscar Música
+                </h3>
+                
+                <!-- Campo de Busca -->
+                <div class="relative">
+                    <input 
+                        type="text" 
+                        id="searchInput" 
+                        placeholder="Digite o nome da música, artista ou ano..."
+                        class="w-full px-6 py-4 text-lg bg-white/10 backdrop-blur-sm border border-blue-400/50 rounded-xl text-white placeholder-blue-300 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-transparent transition-all duration-300"
+                    >
+                    <div class="absolute right-4 top-1/2 transform -translate-y-1/2">
+                        <svg class="w-6 h-6 text-blue-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+                        </svg>
+                    </div>
+                </div>
+                
+
+            </div>
+        </div>
+    </section>
+
     <!-- Modal para exibir conteúdo dos arquivos MD -->
     <div id="contentModal" class="fixed inset-0 bg-black bg-opacity-80 backdrop-blur-sm z-50 hidden">
         <div class="flex items-center justify-center min-h-screen p-4">
@@ -120,5 +148,6 @@
     <script src="js/data.js"></script>
     <script src="js/markdown-content.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/search.js"></script>
 </body>
 </html>
