fix: Adiciona referência ao markdown-content.js para corrigir exibição dos textos .md
- Corrige problema onde os textos markdown não apareciam ao clicar nos cards
- Adiciona script markdown-content.js no index.html antes do app.js
- Garante que a função getMarkdownContent() esteja disponível quando necessária
- Textos dos arquivos .md agora são exibidos corretamente nos modais

--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
     <script src="js/data.js"></script>
     <script src="js/youtube-data.js"></script>
     <script src="js/config.js"></script>
+    <script src="js/markdown-content.js"></script>
     <script src="js/youtube-player.js"></script>
     <script src="js/app.js"></script>
     <script src="js/search.js"></script>
