Adicionado rodapé do aplicativo com texto de créditos e botão para comprar o livro
- Rodapé com texto: 'Desenvolvido por PVolker - 2025 - Versão 2.0'
- Botão 'Comprar o Livro' linkando para o site do livro
- Estilos responsivos para desktop e mobile
- Design consistente com o tema do aplicativo

--- a/index.html
+++ b/index.html
@@ -196,6 +196,21 @@
         </div>
     </div>
 
+    <!-- Rodapé -->
+    <footer class="app-footer">
+        <div class="container mx-auto px-4 py-6">
+            <div class="footer-content">
+                <p class="footer-text">Desenvolvido por PVolker - 2025 - Versão 2.0</p>
+                <a href="https://sites.google.com/mdh-hability.com/filosofiadamusica/in%C3%ADcio" 
+                   target="_blank" 
+                   rel="noopener noreferrer" 
+                   class="footer-button">
+                    Comprar o Livro
+                </a>
+            </div>
+        </div>
+    </footer>
+
     <!-- Scripts -->
     <script src="./js/data.js"></script>
     <script src="./js/youtube-data.js"></script>
